Update: Set VITE_API_BASE_URL in .env.production

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://<YOUR-RENDER-BACKEND-NAME>.onrender.com/api
+VITE_API_BASE_URL=https://registar-login-task-copy1.onrender.com
